objects/Challenge_Comment__c.object
<CustomObject>
    <description>The message board comments for each challenge.</description>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Challenge_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <description>The member making the comment.</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Challenge Comments</relationshipLabel>
        <relationshipName>Challenge_Comments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reply that the comment is directly related to.</description>
        <label>Reply To</label>
        <referenceTo>Challenge_Comment__c</referenceTo>
        <relationshipLabel>Comment</relationshipLabel>
        <relationshipName>Challenge_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Challenge Comment</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Comment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>